// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton snapshots checked 1`] = `
<DocumentFragment>
  <label
    class="SxRadioButton SxRadioButton_size_medium SxRadioButton_color_brand SxRadioButton_checked css-43x8eg-SxRadioButton-root"
  >
    <input
      checked=""
      class="SxRadioButton-input css-ftg04p-SxRadioButton-input"
      type="radio"
      value=""
    />
    <div
      class="SxRadioButton-marker css-1y2onb3-SxRadioButton-marker"
    >
      <div
        class="SxRadioButton-markerDot css-1qao2rf-SxRadioButton-markerDot"
      />
    </div>
    <div
      class="SxRadioButton-content css-1rk6f29-SxRadioButton-content"
    >
      RadioButton
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton snapshots color_brand 1`] = `
<DocumentFragment>
  <label
    class="SxRadioButton SxRadioButton_size_medium SxRadioButton_color_brand css-43x8eg-SxRadioButton-root"
  >
    <input
      class="SxRadioButton-input css-1t2ecgj-SxRadioButton-input"
      type="radio"
      value=""
    />
    <div
      class="SxRadioButton-marker css-qr8oq0-SxRadioButton-marker"
    >
      <div
        class="SxRadioButton-markerDot css-1qao2rf-SxRadioButton-markerDot"
      />
    </div>
    <div
      class="SxRadioButton-content css-1rk6f29-SxRadioButton-content"
    >
      RadioButton
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton snapshots color_danger 1`] = `
<DocumentFragment>
  <label
    class="SxRadioButton SxRadioButton_size_medium SxRadioButton_color_danger css-43x8eg-SxRadioButton-root"
  >
    <input
      class="SxRadioButton-input css-1t2ecgj-SxRadioButton-input"
      type="radio"
      value=""
    />
    <div
      class="SxRadioButton-marker css-1jfvo0u-SxRadioButton-marker"
    >
      <div
        class="SxRadioButton-markerDot css-1qao2rf-SxRadioButton-markerDot"
      />
    </div>
    <div
      class="SxRadioButton-content css-1rk6f29-SxRadioButton-content"
    >
      RadioButton
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton snapshots color_info 1`] = `
<DocumentFragment>
  <label
    class="SxRadioButton SxRadioButton_size_medium SxRadioButton_color_info css-43x8eg-SxRadioButton-root"
  >
    <input
      class="SxRadioButton-input css-1t2ecgj-SxRadioButton-input"
      type="radio"
      value=""
    />
    <div
      class="SxRadioButton-marker css-1t84y3x-SxRadioButton-marker"
    >
      <div
        class="SxRadioButton-markerDot css-1qao2rf-SxRadioButton-markerDot"
      />
    </div>
    <div
      class="SxRadioButton-content css-1rk6f29-SxRadioButton-content"
    >
      RadioButton
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton snapshots color_secondary 1`] = `
<DocumentFragment>
  <label
    class="SxRadioButton SxRadioButton_size_medium SxRadioButton_color_secondary css-43x8eg-SxRadioButton-root"
  >
    <input
      class="SxRadioButton-input css-1t2ecgj-SxRadioButton-input"
      type="radio"
      value=""
    />
    <div
      class="SxRadioButton-marker css-qr8oq0-SxRadioButton-marker"
    >
      <div
        class="SxRadioButton-markerDot css-1qao2rf-SxRadioButton-markerDot"
      />
    </div>
    <div
      class="SxRadioButton-content css-1rk6f29-SxRadioButton-content"
    >
      RadioButton
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton snapshots color_success 1`] = `
<DocumentFragment>
  <label
    class="SxRadioButton SxRadioButton_size_medium SxRadioButton_color_success css-43x8eg-SxRadioButton-root"
  >
    <input
      class="SxRadioButton-input css-1t2ecgj-SxRadioButton-input"
      type="radio"
      value=""
    />
    <div
      class="SxRadioButton-marker css-1urtb9j-SxRadioButton-marker"
    >
      <div
        class="SxRadioButton-markerDot css-1qao2rf-SxRadioButton-markerDot"
      />
    </div>
    <div
      class="SxRadioButton-content css-1rk6f29-SxRadioButton-content"
    >
      RadioButton
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton snapshots color_warning 1`] = `
<DocumentFragment>
  <label
    class="SxRadioButton SxRadioButton_size_medium SxRadioButton_color_warning css-43x8eg-SxRadioButton-root"
  >
    <input
      class="SxRadioButton-input css-1t2ecgj-SxRadioButton-input"
      type="radio"
      value=""
    />
    <div
      class="SxRadioButton-marker css-7dfa22-SxRadioButton-marker"
    >
      <div
        class="SxRadioButton-markerDot css-1qao2rf-SxRadioButton-markerDot"
      />
    </div>
    <div
      class="SxRadioButton-content css-1rk6f29-SxRadioButton-content"
    >
      RadioButton
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton snapshots default 1`] = `
<DocumentFragment>
  <label
    class="SxRadioButton SxRadioButton_size_medium SxRadioButton_color_brand css-43x8eg-SxRadioButton-root"
  >
    <input
      class="SxRadioButton-input css-1t2ecgj-SxRadioButton-input"
      type="radio"
      value=""
    />
    <div
      class="SxRadioButton-marker css-qr8oq0-SxRadioButton-marker"
    >
      <div
        class="SxRadioButton-markerDot css-1qao2rf-SxRadioButton-markerDot"
      />
    </div>
    <div
      class="SxRadioButton-content css-1rk6f29-SxRadioButton-content"
    >
      RadioButton
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton snapshots disableFocus 1`] = `
<DocumentFragment>
  <label
    class="SxRadioButton SxRadioButton_size_medium SxRadioButton_color_brand SxRadioButton_disableFocus css-43x8eg-SxRadioButton-root"
  >
    <input
      class="SxRadioButton-input css-1gxb6w2-SxRadioButton-input"
      type="radio"
      value=""
    />
    <div
      class="SxRadioButton-marker css-qr8oq0-SxRadioButton-marker"
    >
      <div
        class="SxRadioButton-markerDot css-1qao2rf-SxRadioButton-markerDot"
      />
    </div>
    <div
      class="SxRadioButton-content css-1rk6f29-SxRadioButton-content"
    >
      RadioButton
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton snapshots disabled 1`] = `
<DocumentFragment>
  <label
    class="SxRadioButton SxRadioButton_size_medium SxRadioButton_color_brand SxRadioButton_disabled css-w2gy44-SxRadioButton-root"
  >
    <input
      class="SxRadioButton-input css-ftg04p-SxRadioButton-input"
      disabled=""
      type="radio"
      value=""
    />
    <div
      class="SxRadioButton-marker css-21ndb4-SxRadioButton-marker"
    >
      <div
        class="SxRadioButton-markerDot css-1qao2rf-SxRadioButton-markerDot"
      />
    </div>
    <div
      class="SxRadioButton-content css-1rk6f29-SxRadioButton-content"
    >
      RadioButton
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton snapshots large 1`] = `
<DocumentFragment>
  <label
    class="SxRadioButton SxRadioButton_size_large SxRadioButton_color_brand css-43x8eg-SxRadioButton-root"
  >
    <input
      class="SxRadioButton-input css-1t2ecgj-SxRadioButton-input"
      type="radio"
      value=""
    />
    <div
      class="SxRadioButton-marker css-zlg9xg-SxRadioButton-marker"
    >
      <div
        class="SxRadioButton-markerDot css-1qao2rf-SxRadioButton-markerDot"
      />
    </div>
    <div
      class="SxRadioButton-content css-k6soy6-SxRadioButton-content"
    >
      RadioButton
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton snapshots medium 1`] = `
<DocumentFragment>
  <label
    class="SxRadioButton SxRadioButton_size_medium SxRadioButton_color_brand css-43x8eg-SxRadioButton-root"
  >
    <input
      class="SxRadioButton-input css-1t2ecgj-SxRadioButton-input"
      type="radio"
      value=""
    />
    <div
      class="SxRadioButton-marker css-qr8oq0-SxRadioButton-marker"
    >
      <div
        class="SxRadioButton-markerDot css-1qao2rf-SxRadioButton-markerDot"
      />
    </div>
    <div
      class="SxRadioButton-content css-1rk6f29-SxRadioButton-content"
    >
      RadioButton
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton snapshots small 1`] = `
<DocumentFragment>
  <label
    class="SxRadioButton SxRadioButton_size_small SxRadioButton_color_brand css-43x8eg-SxRadioButton-root"
  >
    <input
      class="SxRadioButton-input css-1t2ecgj-SxRadioButton-input"
      type="radio"
      value=""
    />
    <div
      class="SxRadioButton-marker css-mgjgws-SxRadioButton-marker"
    >
      <div
        class="SxRadioButton-markerDot css-14bru7k-SxRadioButton-markerDot"
      />
    </div>
    <div
      class="SxRadioButton-content css-3chyuq-SxRadioButton-content"
    >
      RadioButton
    </div>
  </label>
</DocumentFragment>
`;
